welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:9: error: reassignment to val
	compt = compt + 1;
              ^