welcome.lessons.welcome.loopfor.LoopFor.scala.code

var compt = 0;

for ( compt<- 0 to 7){
	avance();
	prendBiscuit();
	recule();
	poseBiscuit();
	compt = compt + 1;
}








